# sample-chat-app-with-rag

./: .gitignore  README.md  engine.py  main.py  pyproject.toml
backend/: README.md  collector.py  main.py  pyproject.toml
backend/app/: engine.py  main.py
frontend/: next.config.ts  package.json  pnpm-lock.yaml
frontend/src/app/: page.tsx
frontend/src/app/components/: AppSidebar.tsx  ChatApp.tsx  ChatBubble.tsx  ModelVersionContext.tsx  chatapp.tsx  chatbubble.tsx
