[project]
name = "simple-rag-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bs4>=0.0.2",
    "fastapi[standard]>=0.115.7",
    "langchain>=0.3.15",
    "langchain-chroma>=0.2.0",
    "langchain-community>=0.3.15",
    "langchain-openai>=0.3.2",
    "openai>=1.60.1",
    "pydantic>=2.10.6",
]
